# Multithreaded_Programming

./: .gitignore  CMakeLists.txt
qt_client/: CMakeLists.txt
qt_client/include/: mainwindow.h  networkclient.h
qt_client/src/: main.cpp  mainwindow.cpp  mainwindow.ui  networkclient.cpp
server/: CMakeLists.txt
server/include/: connection_acceptor.h  headers.h  room.h  room_command.h  room_message.h  rooms_singleton.h  server_controller.h  socket_connection.h
server/src/: connection_acceptor.cpp  main.cpp  room.cpp  rooms_singleton.cpp  server_controller.cpp  socket_connection.cpp
server_tests/: CMakeLists.txt
server_tests/src/: mock_socket_connection.cpp  room_test.cpp  rooms_singleton_test.cpp  socket_connection_test.cpp
